--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "ioxkl16"]
 	path = ioxkl16
 	url = https://github.com/GDGKualaLumpur/ioxkl2016.git
+[submodule "app/letsencrypt"]
+	path = app/letsencrypt
+	url = https://github.com/AirConsole/letsencrypt
