--- a/dispatch.yaml
+++ b/dispatch.yaml
@@ -1,6 +1,6 @@
 dispatch:
-- url: "*/ioxkl17/*"
+- url: "*/ioxkl17*"
   service: ioxkl17
 
-- url: "*/ioxkl16/*"
+- url: "*/ioxkl16*"
   service: ioxkl16
