--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "app/letsencrypt"]
 	path = app/letsencrypt
 	url = https://github.com/AirConsole/letsencrypt
+[submodule "app/jomcodekl17"]
+	path = app/jomcodekl17
+	url = https://github.com/GDGKualaLumpur/jomcodekl17
