--- a/dispatch.yaml
+++ b/dispatch.yaml
@@ -2,5 +2,8 @@ dispatch:
 - url: "*/ioxkl17*"
   service: ioxkl17
 
+- url: "*/io17extended*"
+  service: ioxkl17
+
 - url: "*/ioxkl16*"
   service: ioxkl16
